--- a/restaurant.html
+++ b/restaurant.html
@@ -104,7 +104,7 @@
 				<!-----------------------------------------------------------------------------Home Page jumbotron------------------------->
 				<div id="main-content" class="container">
 					<div class="jumbotron">
-						<img src="_JFS0884-768.jpg" alt="Picture of restaurant" class="img-responsive visible-xs">
+						<img src="./images/_JFS0884-768.jpg" alt="Picture of restaurant" class="img-responsive visible-xs">
 					</div>
 
 					<div id="home-tiles" class="row">
