--- a/restaurant.html
+++ b/restaurant.html
@@ -103,9 +103,9 @@
 				</div>
 				<!-----------------------------------------------------------------------------Home Page jumbotron------------------------->
 				<div id="main-content" class="container">
-					<div class="jumbotron">
+					<!--<div class="jumbotron">
 						<img src="./images/_JFS0884-768.jpg" alt="Picture of restaurant" class="img-responsive visible-xs">
-					</div>
+					</div>--->
 
 					<div id="home-tiles" class="row">
 						<div class="col-md-4 col-sm-6 col-xs-12">
