--- a/restaurant.html
+++ b/restaurant.html
@@ -63,7 +63,7 @@
 					</header>
 
 
-					<div class="main_container">
+					<div id="main-content" class="container">
 						<div class="carousel-container"
 						<!--------------------------------------------------------------Image Carousel----------------------------------------------------->
 						<div id="myCarousel" class="carousel slide" data-ride="carousel">
@@ -100,14 +100,16 @@
 							</a>
 						</div>
 					</div>
-				</div>
+					<br>
+					<br>
+				<!--</div>
 				<!-----------------------------------------------------------------------------Home Page jumbotron------------------------->
-				<div id="main-content" class="container">
+				<!--<div id="main-content" class="container">--->
 					<!--<div class="jumbotron">
 						<img src="./images/_JFS0884-768.jpg" alt="Picture of restaurant" class="img-responsive visible-xs">
 					</div>--->
 
-					<div id="home-tiles" class="row">
+					<div id="home-tiles" class="row" >
 						<div class="col-md-4 col-sm-6 col-xs-12">
 							<a href="menu-categories.html"><div id="menu-tile"><span>menu</span></div></a>
 						</div>
