--- a/restaurant.html
+++ b/restaurant.html
@@ -63,7 +63,7 @@
 					</header>
 
 
-					<div id="main-content" class="container">
+					<div class="main_container">
 						<div class="carousel-container"
 						<!--------------------------------------------------------------Image Carousel----------------------------------------------------->
 						<div id="myCarousel" class="carousel slide" data-ride="carousel">
@@ -101,68 +101,65 @@
 						</div>
 					</div>
 					<br>
-					<br>
-				<!--</div>
-				<!-----------------------------------------------------------------------------Home Page jumbotron------------------------->
-				<!--<div id="main-content" class="container">--->
-					<!--<div class="jumbotron">
-						<img src="./images/_JFS0884-768.jpg" alt="Picture of restaurant" class="img-responsive visible-xs">
-					</div>--->
+					<!--</div>
+					<!-----------------------------------------------------------------------------Home Page jumbotron------------------------->
+					<div id="main-content" class="container">
+						<div class="jumbotron">
+							<img src="./images/_JFS0884-768.jpg" alt="Picture of restaurant" class="img-responsive visible-xs">
+						</div>
+						<br>
+						<br>
 
-					<div id="home-tiles" class="row" >
-						<div class="col-md-4 col-sm-6 col-xs-12">
-							<a href="menu-categories.html"><div id="menu-tile"><span>menu</span></div></a>
-						</div>
-						<div class="col-md-4 col-sm-6 col-xs-12">
-							<a href="single-category.html#special"><div id="specials-tile"><span>specials</span></div></a>
-						</div>
-						<div class="col-md-4 col-sm-12 col-xs-12">
-							<a href="https://goo.gl/maps/BF8JfJweVJT2" target="_blank">
-								<div id="map-tile">
-									<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14237.934913773255!2d80.9980016!3d26.8563683!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x313cff2150d1fc3e!2sThe+New+Dining+Delight!5e0!3m2!1sen!2sin!4v1555358223796!5m2!1sen!2sin" width="100%" height="250" frameborder="0" style="border:0" allowfullscreen></iframe>
-									<span>map</span>
-								</div>
+						<div id="home-tiles" class="row" >
+							<div class="col-md-4 col-sm-6 col-xs-12">
+								<a href="menu-categories.html"><div id="menu-tile"><span>menu</span></div></a>
+							</div>
+							<div class="col-md-4 col-sm-6 col-xs-12">
+								<a href="single-category.html#special"><div id="specials-tile"><span>specials</span></div></a>
+							</div>
+							<div class="col-md-4 col-sm-12 col-xs-12">
+								<a href="https://goo.gl/maps/BF8JfJweVJT2" target="_blank">
+									<div id="map-tile">
+										<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14237.934913773255!2d80.9980016!3d26.8563683!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x313cff2150d1fc3e!2sThe+New+Dining+Delight!5e0!3m2!1sen!2sin!4v1555358223796!5m2!1sen!2sin" width="100%" height="250" frameborder="0" style="border:0" allowfullscreen></iframe>
+										<span>map</span>
+									</div>
 
-							</a>
+								</a>
+							</div>
 						</div>
+
 					</div>
+					<!------------------------------------------------------------------------------------------------------------------------->
+					<!----------------------------------------------------------------------------------------------------------------------------->
 
-				</div>
-				<!------------------------------------------------------------------------------------------------------------------------->
-				<!----------------------------------------------------------------------------------------------------------------------------->
-
-				<footer class="panel-footer">
-					<div class="container">
-						<div class="row">
-							<section id="hours" class="col-sm-4">
-								<span>Hours:</span><br>
-								Sun-Thurs: 11:15am - 10:00pm<br>
-								Fri: 11:15am - 2:30pm<br>
-								Saturday Closed
-								<hr class="visible-xs">
-							</section>
-							<section id="address" class="col-sm-4">
-								<span>Address:</span><br>
-								Vivek Khand, Gomti Nagar<br>
-								Lucknow, UP 226010
-								<p>* Delivery area within 3-4 kms, with minimum order of &#x20b9;250 plus &#x20b9;30 charge for all deliveries.</p>
-								<hr class="visible-xs">
-							</section>
-							<section id="testimonials" class="col-sm-4">
-								<p>"The best Indian restaurant I've been to! And that's saying a lot, since I've been to many!"</p>
-								<p>"Amazing food! Great service! Couldn't ask for more! I'll be back again and again!"</p>
-							</section>
+					<footer class="panel-footer">
+						<div class="container">
+							<div class="row">
+								<section id="hours" class="col-sm-4">
+									<span>Hours:</span><br>
+									Sun-Thurs: 11:15am - 10:00pm<br>
+									Fri: 11:15am - 2:30pm<br>
+									Saturday Closed
+									<hr class="visible-xs">
+								</section>
+								<section id="address" class="col-sm-4">
+									<span>Address:</span><br>
+									Vivek Khand, Gomti Nagar<br>
+									Lucknow, UP 226010
+									<p>* Delivery area within 3-4 kms, with minimum order of &#x20b9;250 plus &#x20b9;30 charge for all deliveries.</p>
+									<hr class="visible-xs">
+								</section>
+								<section id="testimonials" class="col-sm-4">
+									<p>"The best Indian restaurant I've been to! And that's saying a lot, since I've been to many!"</p>
+									<p>"Amazing food! Great service! Couldn't ask for more! I'll be back again and again!"</p>
+								</section>
+							</div>
+							<div class="text-center">&copy; Copyright Dinning Delight Restaurant 2019</div>
 						</div>
-						<div class="text-center">&copy; Copyright Dinning Delight Restaurant 2019</div>
-					</div>
-				</footer>
-
-				<!-- jQuery (Bootstrap JS plugins depend on it) -->
-				<script src="js/jquery-2.1.4.min.js"></script>
-				<script src="js/bootstrap.min.js"></script>
-				<script src="js/script.js"></script>
+					</footer>
 
 
 
-			</body>
-			</html>
+
+				</body>
+				</html>
