--- a/restaurant.html
+++ b/restaurant.html
@@ -105,7 +105,7 @@
 					<!-----------------------------------------------------------------------------Home Page jumbotron------------------------->
 					<div id="main-content" class="container">
 						<div class="jumbotron">
-							<img src="./images/_JFS0884-768.jpg" alt="Picture of restaurant" class="img-responsive visible-xs">
+							<img src="b1.jpg" alt="Picture of restaurant" class="img-responsive visible-xs">
 						</div>
 						<br>
 						<br>
