--- a/restaurant.html
+++ b/restaurant.html
@@ -61,6 +61,12 @@
 							</div><!-- container-->
 						</nav><!-- #header-nav -->
 					</header>
+						<div id="call-button" class="visible-xs">
+						<a class="btn" href="Mob:410-602-5008">
+							<span class="glyphicon glyphicon-earphone"></span>
+							410-602-5008
+						</a>
+					</div>
 
 
 					<div class="main_container">
