--- a/restaurant.html
+++ b/restaurant.html
@@ -67,6 +67,7 @@
 							410-602-5008
 						</a>
 					</div>
+					<div id="xs-deliver" class="text-center visible-xs">* We Deliver</div>
 
 
 					<div class="main_container">
