--- a/restaurant.html
+++ b/restaurant.html
@@ -54,7 +54,7 @@
 									</li>
 									<li id="phone" class="hidden-xs">
 										<a href="tel:410-602-5008">
-											<span>410-602-5008</span></a><div>* We Deliver Paradise on your plate</div>
+											<span>410-602-5008</span></a><div>*Paradise on plate</div>
 										</li>
 									</ul><!-- #nav-list -->
 								</div><!-- .collapse .navbar-collapse -->
@@ -67,7 +67,7 @@
 							410-602-5008
 						</a>
 					</div>
-					<div id="xs-deliver" class="text-center visible-xs">* We Deliver</div>
+					<div id="xs-deliver" class="text-center visible-xs">*Paradise on plate</div>
 
 
 					<div class="main_container">
